# research

./: .gitmodules  README.md
projects/common-information/: .envrc  .gitignore  MLproject  README.md  pyproject.toml
projects/common-information/common_information/: analyze_mnist_reconstruction.py  analyze_rate_distortion.py  analyze_rate_distortion_ci.py  calculate_rate_distortion.py  dataset_cityscapes.py  dataset_coco.py  dataset_discrete.py  dataset_mnist.py  experiments_cityscapes.py  experiments_coco.py  experiments_discrete.py  experiments_mnist.py  functions.py  metrics.py  model_base.py  model_ci.py  model_ci_shuffle.py  model_cityscapes.py  model_coco.py  model_discrete.py  model_entropy_balle.py  model_lst.py  model_mnist.py  prepare_discrete_dataset.py  processing_cityscapes.py  processing_coco.py  processing_mnist.py  train_depth.py  train_joint_cityscapes.py  train_joint_coco.py  train_joint_discrete.py  train_joint_mnist.py  train_segmentation.py
projects/common-information/deeplabv3plus/: deeplab.py  modeling.py  utils.py
projects/common-information/deeplabv3plus/backbone/: mobilenetv2.py  resnet.py
projects/common-information/docker/: builder.Dockerfile  training.Dockerfile
projects/common-information/make/: auth.mk  clean.mk  env.mk  help.mk  test.mk  train.mk
projects/common-information/tests/: test_rate_distortion.py
projects/compatible-representations/: .envrc  .gitignore  MLproject  README.md  pyproject.toml
projects/compatible-representations/compatible_representations/: analyze_rate_distortion.py  dataset_cityscapes.py  dataset_coco.py  experiments.py  functions.py  model_entropy_balle.py  model_lst.py  model_scalable.py  model_transfer.py  processing.py  processing_cityscapes.py  processing_coco.py  train_depth.py  train_detection.py  train_reconstruction.py  train_segmentation.py
projects/compatible-representations/docker/: training.Dockerfile
projects/compatible-representations/make/: clean.mk  env.mk  test.mk  train.mk
projects/composable-features/: .bashrc  .envrc  .gitattributes  LICENSE  MLproject  README.md  pyproject.toml
projects/composable-features/composable_features/: analyze_splitter.py  dataset_cityscapes.py  functions.py  model_entropy.py  model_lst.py  model_splitter.py  processing.py  test_entropy_baseline.py  test_splitter.py  test_splitter_baseline.py  train_entropy_baseline.py  train_splitter.py  train_splitter_baseline.py  train_splitter_rl.py
projects/composable-features/docker/: builder.Dockerfile  training.Dockerfile
projects/composable-features/make/: clean.mk  env.mk  test.mk
projects/composable-features/tests/unit/: test_dummy.py
projects/conditional-residual/: .bashrc  .gitignore  MLproject  README.md  poetry.toml  pyproject.toml  setup.cfg
projects/conditional-residual/coding/: autoregression.py  conversion.py  distribution.py  normal.py  quantization.py  range.py  range_fixed.py  type.py
projects/conditional-residual/coding/frameworks/: grouped.py
projects/conditional-residual/coding/models/: functions.py  gaussian.py  modules.py
projects/conditional-residual/composable_features/: model_baselines.py  model_scalable.py
projects/conditional-residual/conditional_residual/: analyze_bpg.py  analyze_jpeg.py  analyze_reconstruction.py  analyze_scalability.py  dataset_cityscapes.py  dataset_coco.py  functions.py  model_baselines.py  model_scalable.py  modules.py  processing_cityscapes.py  processing_coco.py  test_cityscapes.py  test_coco.py  train_baseline_detection.py  train_baseline_segmentation.py  train_scalable_detection.py  train_scalable_segmentation.py
projects/conditional-residual/docker/: training.Dockerfile
projects/conditional-residual/make/: build.mk  clean.mk  env.mk
projects/conditional-residual/tests/: test_coding.py
projects/conditional-residual/tests/coding/: test_conversion.py  test_distribution.py  test_normal.py  test_range.py
projects/lm-codec/: .envrc  .gitignore  LICENSE  MLproject  README.md  pyproject.toml
projects/lm-codec/coding/: conversion.py  distribution.py  normal.py  quantization.py  range.py  range_fixed.py  type.py
projects/lm-codec/deepeval/: utils.py
projects/lm-codec/deepeval/benchmarks/: __init__.py
projects/lm-codec/deepeval/confident/: __init__.py  evaluate.py
projects/lm-codec/deepeval/conversation_simulator/: __init__.py
projects/lm-codec/deepeval/dataset/: __init__.py
projects/lm-codec/deepeval/evaluate/: __init__.py  evaluate.py  execute.py
projects/lm-codec/deepeval/event/: __init__.py
projects/lm-codec/deepeval/guardrails/: __init__.py
projects/lm-codec/deepeval/integrations/: __init__.py
projects/lm-codec/deepeval/metrics/: __init__.py  indicator.py
projects/lm-codec/deepeval/models/: __init__.py
projects/lm-codec/deepeval/monitor/: __init__.py
projects/lm-codec/deepeval/prompt/: __init__.py
projects/lm-codec/deepeval/scorer/: __init__.py
projects/lm-codec/deepeval/synthesizer/: __init__.py  synthesizer.py
projects/lm-codec/deepeval/test_case/: __init__.py  mllm_test_case.py
projects/lm-codec/deepeval/test_run/: __init__.py  api.py  hyperparameters.py  test_run.py
projects/lm-codec/docker/: builder.Dockerfile  training.Dockerfile
projects/lm-codec/image_codec/: analyze_rademacher.py  analyze_spectral.py  dataset_imagenet.py  functions.py  model.py  processing.py  train.py
projects/lm-codec/litgpt/: __init__.py  __main__.py  adapter.py  adapter_v2.py  api.py  args.py  config.py  lora.py  model.py  pretrain.py  prompts.py  tokenizer.py  utils.py
projects/lm-codec/lm_codec/: analyze_rademacher.py  analyze_rate_distortion.py  analyze_spectral.py  analyze_spectral_analysis.py  analyze_time_complexity.py  analyze_zip.py  analyze_zstd.py  dataset_openwebtext.py  evaluate.py  experiments.py  functions.py  model_codec.py  model_entropy.py  model_layers.py  model_lm.py  model_lm_codec.py  model_lm_codec_litgpt.py  plot.py  prepare_openwebtext.py  test.py  train.py
projects/lm-codec/make/: auth.mk  build.mk  clean.mk  env.mk  test.mk  train.mk
projects/lm-codec/tests/: test_coding.py  test_fourier.py
(+85 files in other folders)
